--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,7 +2,8 @@
   background-image: url('../../images/home/home-about.jpg');
   min-height: 100vh;
   background-size: cover;
-  background-position: fixed;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .home-community-square {
