--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home-about {
   background-image: url('../../images/home/home-about.jpg');
-  min-height: 100vh;
+  min-height: 90vh;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -22,4 +22,10 @@
 
 .homesite-card {
 
+}
+
+.home-featured li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
